# system-config-language

./: Makefile  README.md  bug-819811.patch  system-config-language-1.4.0-Change-Oriya-to-Odia.patch  system-config-language-1.4.0-Disable-OK-for-default-language.patch  system-config-language-1.4.0-Fix-No-Groups-exists-traceback.patch  system-config-language-1.4.0-Fix-text-mode-crash-for-no-group-exists.patch  system-config-language-1.4.0-enhance-ui-messages.patch  system-config-language-1.4.0-translation-updates.patch  system-config-language-1.4.0-translation-updates2.patch  system-config-language-1.4.0-update-po-headers.patch  system-config-language.spec
src/: COPYING  ChangeLog  ChangeLog.old  Changelog  Makefile  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  configure  configure.ac  create_desktop.py  system-config-language.1  system-config-language.desktop.in.in  system-config-language.spec
src/data/: Makefile.am  Makefile.in
src/data/conf/: Makefile.am  Makefile.in
src/data/icons/: Makefile.am  Makefile.in
src/pixmaps/.svn/: entries
src/po/: LINGUAS  POTFILES.in  ar.mo  ar.po  as.mo  as.po  ast.po  be.mo  be.po  bg.mo  bg.po  bn.mo  bn.po  bn_IN.mo  bn_IN.po  bs.po  ca.mo  ca.po  cs.mo  cs.po  cy.mo  cy.po  da.mo  da.po  de.mo  de.po  el.mo  el.po  en_GB.mo  en_GB.po  es.mo  es.po  et.mo  et.po  fa.mo  fa.po  fi.mo  fi.po  fr.mo  fr.po  (+106 more)
src/po/.svn/: entries
src/po/.svn/text-base/: Makefile.svn-base  ar.po.svn-base  be.po.svn-base  bn.po.svn-base  da.po.svn-base  de.po.svn-base  en_GB.po.svn-base  et.po.svn-base  fa.po.svn-base  fi.po.svn-base  fr.po.svn-base  gl.po.svn-base  gu.po.svn-base  he.po.svn-base  hi.po.svn-base  hy.po.svn-base  id.po.svn-base  ja.po.svn-base  ku.po.svn-base  ml.po.svn-base  mn.po.svn-base  mr.po.svn-base  my.po.svn-base  nl.po.svn-base  or.po.svn-base  pt.po.svn-base  ro.po.svn-base  ru.po.svn-base  sk.po.svn-base  sq.po.svn-base  sr.po.svn-base  sv.po.svn-base  system-config-language.pot.svn-base  tg.po.svn-base  uk.po.svn-base  ur.po.svn-base  zh_CN.po.svn-base
src/src/: Makefile.am  Makefile.in  gui_detailsDialog.py  gui_errors.py  gui_install.py  gui_progress.py  lang_dict.py  language_backend.py  language_gui.py  language_tui.py  locale-list  system-config-language.py  tui_install.py
src/src/.svn/: entries
src/src/.svn/text-base/: gui_install.py.svn-base  i18n-long.svn-base  i18n.svn-base  lang_dict.py.svn-base  language_backend.py.svn-base  language_gui.py.svn-base
